--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		// a crc (or various crcs) can be provided for source files, allowing old formats like IPS to have validation!
 		var CUSTOM_PATCHER = [
             {
-                file: './patch/MFR1.4_TestBuild3.ups',
+                file: './patch/MFR1.4.ups',
                 name: 'Mega Moemon Fire Red v1.4',
             }
         ];
