--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 		// a crc (or various crcs) can be provided for source files, allowing old formats like IPS to have validation!
 		var CUSTOM_PATCHER = [
             {
-                file: './patch/MFR1.4b.ups',
-                name: 'Mega Moemon Fire Red v1.4b',
+                file: './patch/MFR1.4c.ups',
+                name: 'Mega Moemon Fire Red v1.4c',
             }
         ];
 	--></script>
